--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,19 @@ services:
   redis:
     image: redis
     ports:
-      - "127.0.0.1:${REDIS_PORT:-6379}:6379"  # Maps host port from env to container port 6379
+      - "127.0.0.1:${REDIS_PORT:-6379}:${REDIS_PORT:-6379}"  # Maps host port from env to container port 6379
     user: "redis:redis"
     restart: unless-stopped
+    command: --port ${REDIS_PORT:-6379}
 
   postgres:
     image: postgres
     ports:
       - "127.0.0.1:${POSTGRES_PORT:-5432}:5432"  # Maps host port from env to container port 5432
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: pass
-      POSTGRES_DB: outline
+      POSTGRES_USER: ${PG_USER
+      POSTGRES_PASSWORD: ${PG_PASS}
+      POSTGRES_DB: ${PG_DB}
     user: "postgres:postgres"
     restart: unless-stopped
     volumes:
@@ -22,7 +23,7 @@ services:
   outline:
     build: .
     ports:
-      - "${PORT:-8080}:${PORT:-8080}"  # Maps host port to container port using env variable
+      - "${APP_PORT:-8080}:${APP_PORT:-8080}"  # Maps host port to container port using env variable
     depends_on:
       - postgres
       - redis
@@ -30,6 +31,8 @@ services:
       - .env
     environment:
       - NODE_ENV=production
+      - DATABASE_URL=postgres://${PG_USER}:${PG_PASS}@${PG_HOST}:${PG_PORT}/${PG_DB}
+      - REDIS_URL=redis://redis:${REDIS_PORT}
     volumes:
       - outline_data:/var/lib/outline/data
     restart: unless-stopped
